Goal compliance fixes. Using CommonTools.tokenize() instead of StringTokenizer. Replaced static Vector3D.length( vector ) with non-static length() method.